--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -53,7 +53,7 @@ button {
             <label>Password : </label> 
             <input type="password" placeholder="Enter Password" name="password" required>
             <button type="submit">Login</button> 
-            
+            <a href="/oauth2/authorization/google">google Login</a>
             <a href="/joinForm"> 새로 가입 하시겠습니까? </a> 
         </div> 
     </form>   
